# AttendanceSystem

./: .gitignore  Dockerfile  ONBOARDING_API_COMPLETE.md  ONBOARDING_COMPLETE_GUIDE.md  POST_REGISTER_FACE_API.md  SHIFT_HOURS_FEATURE.md  SHIFT_LOADING_FIX.md  app.py  app.py.backup_20260425_013018  attendance_queries.py  check_imports.py  db.py  employee_queries.py  machine_queries.py  out.txt  pyproject.toml  requirements.txt  start_server.bat  test_onboarding.py  test_post_endpoint.ps1  test_register_face.ps1  test_register_face.py
src/: __init__.py  config.py  utils.py
src/attendance/: attendance.py  attendance_backup_20260424_205730.py  query.py  query_backup_20260424_205804.py
src/auth/: auth.py  query.py
src/dashboard/: __init__.py  attendance_dashboard.py  dashboard.py
src/employees/: employees.py  query.py
src/masters/: __init__.py  company_branch.py  departments.py  designations.py  machines.py  occupations.py  query.py  shifts.py
src/models/: attendance.py  employee.py  masters.py  user.py
src/onboarding/: __init__.py  onboarding.py  query.py
src/schemas/: __init__.py  attendance.py  employee.py  masters.py  user.py
